# hooknativemethod

./: settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/com/piex/app/hooknativemethod/: MainActivity.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
gradle/wrapper/: gradle-wrapper.properties
hooklib/: build.gradle
hooklib/src/main/cpp/: CMakeLists.txt
hooklib/src/main/cpp/jni/: jni.cpp  jni.h
hooklib/src/main/cpp/substrate/: SubstrateHook.cpp
hooklib/src/main/java/com/piex/lib/hooklib/: NativeLib.kt
